# ngmt-core

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  PROTOCOL.md  README.md
.github/workflows/: ci.yml
branding/: README.md
docs/: discovery-status.md
include/: ngmt_core.hpp
include/ngmt/: jitter_buffer.hpp
include/ngmt/discovery/: advertiser.hpp
include/ngmt/protocol/: object.hpp  packetizer.hpp  types.hpp
src/: jitter_buffer.cpp  ngmt_core.cpp
src/discovery/: mdns_impl.cpp
src/protocol/: object.cpp  packetizer.cpp
tools/: ngmt_transport_ffi_smoke.cpp
